--- a/site1/css1/styles.css
+++ b/site1/css1/styles.css
@@ -10,18 +10,25 @@ body{
 	background-color:  white;
 	border-radius: 0;
 	border: 0;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  height: 16.67%;
+  position: fixed;
+  z-index: 2;
 }
 #logo-img{
 	background-position: center center;
 	background-image: url(https://www.freelogodesign.org/file/app/client/thumb/2bfb193e-a697-4a3e-b7a3-45181fe2f9bc_200x200.png?1598977852004);
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
-	width: 175px;
-	height: 175px;
-	margin: 10px 15px 10px 0px; 
+	width: 100px;
+	height: 100px;
+	margin: 0px 15px 10px 0px; 
 }
 .navbar-brand{
-	padding-top: 25px;
+	padding-top: 1px;
+  margin-top: 0px;
 }
 .navbar-brand h1{
 	font-family: 'Fredoka One', cursive;
@@ -30,7 +37,6 @@ body{
 	text-transform: capitalize;
 	font-weight: bold;
 	text-shadow: 1px 1px 6px #222, -1px 0px black, 1px 0px black, 0px 1px black, 0px -1px black;
-	margin-top: 40px;
 	margin-bottom: 20px;
 	line-height: .75;
 }
@@ -50,33 +56,19 @@ body{
 	text-align: center;
   /*text-shadow: -0.3px 0px black, 0.3px 0px black, 0px 0.3px black, 0px -0.3px black;*/
 }
-#nav-list a:hover{
+/*#nav-list a:hover{
 	background-color: #E7E7E7 ;
 }
 #nav-list a span{
 	font-size: 1.4em
 }
-
-#phone{
-	margin-top: 5px;
-}
-#phone a{
-	text-align: right;
-	padding-bottom: 0;
-}
-#phone div{
-	text-align: right;
-	padding-right: 15px;
-	color: gray;
-}
-
 .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
   border: 1px solid black;
 }
 .navbar-header button.navbar-toggle {
   clear: both;
   margin-top: -30px;
-}
+}*/
 
 /* FOOTER */
 .panel-footer {
@@ -134,129 +126,6 @@ body{
 }
 /* END FOOTER */
 
-
-.container .jumbotron {
-  box-shadow: 0 0 50px #4d0505;
-  border: 2px solid #4d0505;
-}
-#menu-tile, #specials-tile, #map-tile {
-  height: 250px;
-  width: 100%;
-  margin-bottom: 15px;
-  position: relative;
-  border: 2px solid #3F0C1F;
-  overflow: hidden;
-}
-#menu-tile:hover, #specials-tile:hover, #map-tile:hover {
-  box-shadow: 0 1px 5px 1px #cccccc;
-}
-
-#menu-tile {
-  background: url(https://mir-s3-cdn-cf.behance.net/project_modules/1400/a6556d56754573.59bac462be6f8.jpg) no-repeat;
-  background-position: center;
-  background-size: 100% 100%;
-}
-#specials-tile {
-  background: url(https://mudheshmag.com/wp-content/uploads/2020/07/kfc-1.jpg) no-repeat;
-  background-position: center;
-  background-size: 120% 100%;
-}
-
-#menu-tile span, #specials-tile span, #map-tile span {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  text-align: center;
-  font-size: 1.6em;
-  text-transform: uppercase;
-  background-color: #000;
-  color: #fff;
-  opacity: .8;
-}
-
-/* MENU CATEGORIES PAGE */
-.category-tile { 
-  position: relative;
-  border: 2px solid black;
-  overflow: hidden;
-  width: 200px;
-  height: 200px;
-  margin: 0 auto 15px;
-  box-shadow: 0 0 20px #4d0505;
-}
-.category-tile span {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  text-align: center;
-  font-size: 1.2em;
-  text-transform: uppercase;
-  background-color: #000;
-  color: #fff;
-  opacity: .8;
-}
-.category-tile:hover {
-  box-shadow: 0 1px 5px 1px #cccccc;
-}
-
-#menu-categories-title + div {
-  margin-bottom: 50px;
-  color: white;
-}
-#menu-categories-title{
-	color: white;
-}
-
-/* END MENU CATEGORIES PAGE */
-
-.menu-item-tile {
-  margin-bottom: 25px;
-}
-.menu-item-tile hr {
-  width: 80%;
-}
-.menu-item-tile .menu-item-price {
-  font-size: 1.1em;
-  text-align: right;
-  margin-top: -15px;
-  margin-right: -15px;
-}
-.menu-item-tile .menu-item-price span {
-  font-size: .6em;
-}
-.menu-item-photo {
-  position: relative;
-  border: 2px solid black; 
-  overflow: hidden;
-  padding: 0;
-  margin-right: -15px;
-  margin-left: auto;
-  margin-bottom: 20px;
-  max-width: 250px;
-  box-shadow: 0 0 20px #4d0505;
-}
-.menu-item-photo div {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 80px;
-  background-color: #557c3e;
-  text-align: center;
-}
-.menu-item-description {
-  padding-right: 30px;
-}
-h3.menu-item-title {
-  margin: 0 0 10px;
-}
-.menu-item-details {
-  font-size: .9em;
-  font-style: italic;
-}
-/* END SINGLE CATEGORY PAGE */
-
 #soon {
 	font-size: 10vw;
 	text-shadow: 0.4vw .4vw 0 black;
@@ -266,34 +135,49 @@ h3.menu-item-title {
 	text-shadow: 0 0 4vw black;
 }
 
-/*#main-content{
-  position: relative;
-}*/
+#main-content{
+  padding-left: 100px;
+  padding-top: 120px;
+}
   .sidenav {
     height: 100%;
     width: 200px;
-    position: relative;
+    position: fixed;
     z-index: 1;
-    top: 0;
-    left: -105px;
+    top: 0px;
+    left: 0;
     overflow-x: hidden;
     padding-top: 0px;
-    margin-top: -20px;
-    float: left;
-    margin-bottom: -30px;
+    margin-top: 100px;
+    /*margin-top: -20px;*/
+    /*float: left;*/
+    display: block;
+    /*margin-bottom: -30px;*/
   }
 
   .sidenav a {
-    padding: 6px 6px 6px 32px;
+    padding: auto;
+    padding-top: 25px; 
     text-decoration: none;
-    font-size: 25px;
+    font-size: 20px;
     color: white;
-    height: 200px;
-    width: 200px;
+    height: 16.67%;
+    width: 100px;
     border: 1px solid black;
     display: block;
-    text-align: left;
-
+    text-align: center;
+    overflow: hidden;
+    transition: 0.5s;
+    transition-property: width;
+}
+.sidenav a span{
+  display: none;
+}
+.sidenav i{
+  font-size: 40px;  
+} 
+#homie{
+  background-color: black;
 }
 #abouts{
   background-color: Crimson;
@@ -308,8 +192,13 @@ h3.menu-item-title {
   background-color: MediumBlue;
 }
 #sidenav.sidenav a:hover {
-  color: black;
-  background-color: lightgray;
+  /*color: black;
+  background-color: white;*/
+  width: 200px;
+  padding-top: 15px;
+}
+#sidenav.sidenav a:hover span{
+  display: block;
 }
 
 
