--- a/site1/css1/styles.css
+++ b/site1/css1/styles.css
@@ -266,7 +266,7 @@ h3.bazar{
   background-image: url(https://www.avensonline.org/blog/wp-content/uploads/2015/09/chemistry-and-its-applications2.jpg);
 }*/
 #chempage{
-  background-image: url(https://news.mit.edu/sites/default/files/styles/news_article__image_gallery/public/images/201706/MIT-Predicting-Reactions-1_0.jpg?itok=q5Dlcw3w);
+  background-image: url(/chemka.png);
   background-size: auto 90%;
   background-repeat: no-repeat;
   background-position: center top;
